--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -233,7 +233,7 @@ section,
     height: 20rem;
   }
   @include for-size(xl-up) {
-    height: 50rem;
+    height: 45rem;
   }
 }
 
